--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-<title>Einfaches Tetris</title>
+<title>Tetris - Bessere Touchsteuerung</title>
 <style>
   body {
     margin:0; padding:0; background:#111; color:#fff; font-family:sans-serif;
@@ -30,258 +30,291 @@
 
 <script>
 (() => {
-  try {
-    const canvas = document.getElementById('tetris');
-    const ctx = canvas.getContext('2d');
-    const scoreElem = document.getElementById('score');
-    const levelElem = document.getElementById('level');
+  const canvas = document.getElementById('tetris');
+  const ctx = canvas.getContext('2d');
+  const scoreElem = document.getElementById('score');
+  const levelElem = document.getElementById('level');
 
-    const COLS = 10;
-    const ROWS = 20;
-    const BLOCK = 24;
+  const COLS = 10;
+  const ROWS = 20;
+  const BLOCK = 24;
 
-    let arena = createMatrix(COLS, ROWS);
-    const colors = [
-      null,
-      '#FF0D72', '#FF8E0D', '#FFD700', '#1E90FF',
-      '#00FFFF', '#00FF00', '#FF0000'
-    ];
+  let arena = createMatrix(COLS, ROWS);
+  const colors = [
+    null,
+    '#FF0D72', '#FF8E0D', '#FFD700', '#1E90FF',
+    '#00FFFF', '#00FF00', '#FF0000'
+  ];
 
-    const pieces = {
-      'T': [[0,1,0],[1,1,1],[0,0,0]],
-      'O': [[2,2],[2,2]],
-      'L': [[0,0,3],[3,3,3],[0,0,0]],
-      'J': [[4,0,0],[4,4,4],[0,0,0]],
-      'I': [[0,0,0,0],[5,5,5,5],[0,0,0,0],[0,0,0,0]],
-      'S': [[0,6,6],[6,6,0],[0,0,0]],
-      'Z': [[7,7,0],[0,7,7],[0,0,0]]
-    };
+  const pieces = {
+    'T': [[0,1,0],[1,1,1],[0,0,0]],
+    'O': [[2,2],[2,2]],
+    'L': [[0,0,3],[3,3,3],[0,0,0]],
+    'J': [[4,0,0],[4,4,4],[0,0,0]],
+    'I': [[0,0,0,0],[5,5,5,5],[0,0,0,0],[0,0,0,0]],
+    'S': [[0,6,6],[6,6,0],[0,0,0]],
+    'Z': [[7,7,0],[0,7,7],[0,0,0]]
+  };
 
-    function createMatrix(w,h) {
-      const m = [];
-      while(h--) m.push(new Array(w).fill(0));
-      return m;
-    }
+  function createMatrix(w,h) {
+    const m = [];
+    while(h--) m.push(new Array(w).fill(0));
+    return m;
+  }
 
-    function drawMatrix(matrix, offset) {
-      matrix.forEach((row, y) => {
-        row.forEach((val, x) => {
-          if(val !== 0){
-            ctx.fillStyle = colors[val];
-            ctx.fillRect((x + offset.x)*BLOCK, (y + offset.y)*BLOCK, BLOCK, BLOCK);
-            ctx.strokeStyle = '#111';
-            ctx.lineWidth = 2;
-            ctx.strokeRect((x + offset.x)*BLOCK, (y + offset.y)*BLOCK, BLOCK, BLOCK);
-          }
-        });
+  function drawMatrix(matrix, offset) {
+    matrix.forEach((row, y) => {
+      row.forEach((val, x) => {
+        if(val !== 0){
+          ctx.fillStyle = colors[val];
+          ctx.fillRect((x + offset.x)*BLOCK, (y + offset.y)*BLOCK, BLOCK, BLOCK);
+          ctx.strokeStyle = '#111';
+          ctx.lineWidth = 2;
+          ctx.strokeRect((x + offset.x)*BLOCK, (y + offset.y)*BLOCK, BLOCK, BLOCK);
+        }
       });
-    }
+    });
+  }
 
-    function draw() {
-      ctx.fillStyle = '#000';
-      ctx.fillRect(0,0,canvas.width,canvas.height);
-      drawMatrix(arena, {x:0,y:0});
-      drawMatrix(player.matrix, player.pos);
-    }
+  function draw() {
+    ctx.fillStyle = '#000';
+    ctx.fillRect(0,0,canvas.width,canvas.height);
+    drawMatrix(arena, {x:0,y:0});
+    drawMatrix(player.matrix, player.pos);
+  }
 
-    function collide(arena, player) {
-      const m = player.matrix;
-      const o = player.pos;
-      for(let y=0; y<m.length; y++) {
-        for(let x=0; x<m[y].length; x++) {
-          if(m[y][x] !== 0 &&
-             (arena[y + o.y] && arena[y + o.y][x + o.x]) !== 0) {
-            return true;
-          }
+  function collide(arena, player) {
+    const m = player.matrix;
+    const o = player.pos;
+    for(let y=0; y<m.length; y++) {
+      for(let x=0; x<m[y].length; x++) {
+        if(m[y][x] !== 0 &&
+           (arena[y + o.y] && arena[y + o.y][x + o.x]) !== 0) {
+          return true;
         }
       }
-      return false;
     }
+    return false;
+  }
 
-    function merge(arena, player) {
-      player.matrix.forEach((row,y) => {
-        row.forEach((val,x) => {
-          if(val !== 0) {
-            arena[y + player.pos.y][x + player.pos.x] = val;
-          }
-        });
+  function merge(arena, player) {
+    player.matrix.forEach((row,y) => {
+      row.forEach((val,x) => {
+        if(val !== 0) {
+          arena[y + player.pos.y][x + player.pos.x] = val;
+        }
       });
-    }
+    });
+  }
 
-    function playerReset() {
-      const keys = Object.keys(pieces);
-      const pieceType = keys[Math.floor(Math.random()*keys.length)];
-      player.matrix = pieces[pieceType];
-      player.pos.y = 0;
-      player.pos.x = Math.floor(COLS/2) - Math.floor(player.matrix[0].length/2);
-      if(collide(arena, player)) {
-        arena.forEach(row => row.fill(0));
-        player.score = 0;
-        player.level = 1;
-        player.lines = 0;
-        updateScore();
-      }
+  function playerReset() {
+    const keys = Object.keys(pieces);
+    const pieceType = keys[Math.floor(Math.random()*keys.length)];
+    player.matrix = pieces[pieceType].map(row => row.slice()); // deep copy wichtig!
+    player.pos.y = 0;
+    player.pos.x = Math.floor(COLS/2) - Math.floor(player.matrix[0].length/2);
+    if(collide(arena, player)) {
+      arena.forEach(row => row.fill(0));
+      player.score = 0;
+      player.level = 1;
+      player.lines = 0;
+      dropInterval = 1000;
+      updateScore();
     }
+  }
 
-    function arenaSweep() {
-      let rowCount = 0;
-      outer: for(let y=arena.length-1; y>=0; y--) {
-        for(let x=0; x<arena[y].length; x++) {
-          if(arena[y][x] === 0) {
-            continue outer;
-          }
-        }
-        arena.splice(y,1);
-        arena.unshift(new Array(COLS).fill(0));
-        rowCount++;
-        y++;
-      }
-      if(rowCount > 0) {
-        const points = [0, 40, 100, 300, 1200];
-        player.score += points[rowCount] * player.level;
-        player.lines += rowCount;
-        if(player.lines >= player.level * 10){
-          player.level++;
-          dropInterval = Math.max(100, dropInterval - 100);
-        }
-        updateScore();
-      }
-    }
-
-    function updateScore() {
-      scoreElem.textContent = player.score;
-      levelElem.textContent = player.level;
-    }
-
-    function rotate(matrix, dir) {
-      for(let y=0; y<matrix.length; y++) {
-        for(let x=0; x<y; x++) {
-          [matrix[x][y], matrix[y][x]] = [matrix[y][x], matrix[x][y]];
+  function arenaSweep() {
+    let rowCount = 0;
+    outer: for(let y=arena.length-1; y>=0; y--) {
+      for(let x=0; x<arena[y].length; x++) {
+        if(arena[y][x] === 0) {
+          continue outer;
         }
       }
-      if(dir > 0) {
-        matrix.forEach(row => row.reverse());
-      } else {
-        matrix.reverse();
+      arena.splice(y,1);
+      arena.unshift(new Array(COLS).fill(0));
+      rowCount++;
+      y++;
+    }
+    if(rowCount > 0) {
+      const points = [0, 40, 100, 300, 1200];
+      player.score += points[rowCount] * player.level;
+      player.lines += rowCount;
+      if(player.lines >= player.level * 10){
+        player.level++;
+        dropInterval = Math.max(100, dropInterval - 100);
+      }
+      updateScore();
+    }
+  }
+
+  function updateScore() {
+    scoreElem.textContent = player.score;
+    levelElem.textContent = player.level;
+  }
+
+  function rotate(matrix, dir) {
+    for(let y=0; y<matrix.length; y++) {
+      for(let x=0; x<y; x++) {
+        [matrix[x][y], matrix[y][x]] = [matrix[y][x], matrix[x][y]];
       }
     }
-
-    function playerRotate(dir) {
-      const pos = player.pos.x;
-      let offset = 1;
-      rotate(player.matrix, dir);
-      while(collide(arena, player)){
-        player.pos.x += offset;
-        offset = -(offset + (offset > 0 ? 1 : -1));
-        if(offset > player.matrix[0].length) {
-          rotate(player.matrix, -dir);
-          player.pos.x = pos;
-          return;
-        }
-      }
+    if(dir > 0) {
+      matrix.forEach(row => row.reverse());
+    } else {
+      matrix.reverse();
     }
+  }
 
-    function playerDrop() {
-      player.pos.y++;
-      if(collide(arena, player)){
-        player.pos.y--;
-        merge(arena, player);
-        arenaSweep();
-        playerReset();
-      }
-      dropCounter = 0;
-    }
-
-    function playerMove(dir){
-      player.pos.x += dir;
-      if(collide(arena, player)){
-        player.pos.x -= dir;
-      }
-    }
-
-    let dropCounter = 0;
-    let dropInterval = 1000;
-    let lastTime = 0;
-    let paused = false;
-
-    function update(time=0){
-      if(paused){
-        lastTime = time;
-        requestAnimationFrame(update);
+  function playerRotate(dir) {
+    const pos = player.pos.x;
+    let offset = 1;
+    rotate(player.matrix, dir);
+    while(collide(arena, player)){
+      player.pos.x += offset;
+      offset = -(offset + (offset > 0 ? 1 : -1));
+      if(offset > player.matrix[0].length) {
+        rotate(player.matrix, -dir);
+        player.pos.x = pos;
         return;
       }
-      const delta = time - lastTime;
-      lastTime = time;
-      dropCounter += delta;
-      if(dropCounter > dropInterval){
-        playerDrop();
-      }
-      draw();
-      requestAnimationFrame(update);
     }
-
-    window.addEventListener('keydown', e => {
-      if(e.key === 'ArrowLeft') {
-        playerMove(-1);
-      } else if(e.key === 'ArrowRight') {
-        playerMove(1);
-      } else if(e.key === 'ArrowDown') {
-        playerDrop();
-      } else if(e.key === 'ArrowUp') {
-        playerRotate(1);
-      } else if(e.key === 'Escape') {
-        paused = !paused;
-        console.log(paused ? "Pause" : "Weiter");
-      }
-    });
-
-    // Einfaches Touch Handling: Swipe Left/Right zum bewegen, Swipe Down zum schnellen Fallen, Swipe Up zum Drehen
-    let touchStartX = 0;
-    let touchStartY = 0;
-    let touchMoved = false;
-
-    canvas.addEventListener('touchstart', e => {
-      const t = e.touches[0];
-      touchStartX = t.clientX;
-      touchStartY = t.clientY;
-      touchMoved = false;
-    });
-
-    canvas.addEventListener('touchmove', e => {
-      if(touchMoved) return;
-      const t = e.touches[0];
-      const dx = t.clientX - touchStartX;
-      const dy = t.clientY - touchStartY;
-      if(Math.abs(dx) > 30 && Math.abs(dx) > Math.abs(dy)) {
-        if(dx > 0) playerMove(1);
-        else playerMove(-1);
-        touchMoved = true;
-      } else if(Math.abs(dy) > 30 && Math.abs(dy) > Math.abs(dx)) {
-        if(dy > 0) playerDrop();
-        else playerRotate(1);
-        touchMoved = true;
-      }
-    });
-
-    canvas.addEventListener('touchend', e => {
-      touchMoved = false;
-    });
-
-    const player = {
-      pos: {x: 0, y: 0},
-      matrix: null,
-      score: 0,
-      level: 1,
-      lines: 0
-    };
-
-    playerReset();
-    updateScore();
-    requestAnimationFrame(update);
-  } catch(err) {
-    console.error("Fehler im Tetris-Skript:", err);
-    alert("Ein Fehler ist aufgetreten. Bitte Konsole prüfen.");
   }
+
+  function playerDrop() {
+    player.pos.y++;
+    if(collide(arena, player)){
+      player.pos.y--;
+      merge(arena, player);
+      arenaSweep();
+      playerReset();
+    }
+    dropCounter = 0;
+  }
+
+  function playerMove(dir){
+    player.pos.x += dir;
+    if(collide(arena, player)){
+      player.pos.x -= dir;
+    }
+  }
+
+  let dropCounter = 0;
+  let dropInterval = 1000;
+  let lastTime = 0;
+  let paused = false;
+
+  function update(time=0){
+    if(paused){
+      lastTime = time;
+      requestAnimationFrame(update);
+      return;
+    }
+    const delta = time - lastTime;
+    lastTime = time;
+    dropCounter += delta;
+    if(dropCounter > dropInterval){
+      playerDrop();
+    }
+    draw();
+    requestAnimationFrame(update);
+  }
+
+  window.addEventListener('keydown', e => {
+    if(e.key === 'ArrowLeft') {
+      playerMove(-1);
+    } else if(e.key === 'ArrowRight') {
+      playerMove(1);
+    } else if(e.key === 'ArrowDown') {
+      playerDrop();
+    } else if(e.key === 'ArrowUp') {
+      playerRotate(1);
+    } else if(e.key === 'Escape') {
+      paused = !paused;
+      console.log(paused ? "Pause" : "Weiter");
+    }
+  });
+
+  // Erweiterte Touchsteuerung
+
+  let touchStartX = 0;
+  let touchStartY = 0;
+  let touchId = null;
+  let moveIntervalId = null;
+
+  // Erkennen der Wischrichtung und kontinuierliche Bewegung wenn gehalten
+  function startContinuousMove(dirFunc) {
+    if(moveIntervalId) clearInterval(moveIntervalId);
+    dirFunc(); // sofort ausführen
+    moveIntervalId = setInterval(dirFunc, 150);
+  }
+  function stopContinuousMove() {
+    if(moveIntervalId) {
+      clearInterval(moveIntervalId);
+      moveIntervalId = null;
+    }
+  }
+
+  canvas.addEventListener('touchstart', e => {
+    if(e.touches.length !== 1) return;
+    const t = e.touches[0];
+    touchStartX = t.clientX;
+    touchStartY = t.clientY;
+    touchId = t.identifier;
+  });
+
+  canvas.addEventListener('touchmove', e => {
+    if(touchId === null) return;
+    const t = Array.from(e.touches).find(t => t.identifier === touchId);
+    if(!t) return;
+
+    const dx = t.clientX - touchStartX;
+    const dy = t.clientY - touchStartY;
+
+    // Wenn Bewegung größer als 15px
+    if(Math.abs(dx) > 15 || Math.abs(dy) > 15) {
+      // Horizontal bewegen
+      if(Math.abs(dx) > Math.abs(dy)) {
+        if(dx > 0) {
+          startContinuousMove(() => playerMove(1));
+        } else {
+          startContinuousMove(() => playerMove(-1));
+        }
+      } else {
+        // Vertikal
+        if(dy > 0) {
+          startContinuousMove(() => playerDrop());
+        } else {
+          stopContinuousMove();
+          playerRotate(1);
+          // Nach Rotation Startposition neu setzen, damit weitere Bewegungen erkannt werden
+          touchStartX = t.clientX;
+          touchStartY = t.clientY;
+        }
+      }
+    }
+  });
+
+  canvas.addEventListener('touchend', e => {
+    stopContinuousMove();
+    touchId = null;
+  });
+  canvas.addEventListener('touchcancel', e => {
+    stopContinuousMove();
+    touchId = null;
+  });
+
+  const player = {
+    pos: {x:0,y:0},
+    matrix: null,
+    score: 0,
+    level: 1,
+    lines: 0
+  };
+
+  playerReset();
+  updateScore();
+  update();
 })();
 </script>
 
